add plugin support
